@@ -104,7 +104,7 @@ public class BuilderTest extends BaseTest {
     public void testNoURL() throws Exception {
         expectedException.expect(IllegalArgumentException.class);
         expectedException.expectMessage("no download source given (version, git-ref, url, file)");
-        CrateTestServer.builder()
+        new CrateTestServer.Builder()
                 .clusterName("mycluster")
                 .host("127.0.0.1")
                 .httpPort(12345)
